crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__multi_let_then_where.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let duration_ms = duration * 1000 | where duration_ms > 500\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
), _s1 AS (
  SELECT COLUMNS(c -> c NOT IN ('duration_ms')), (("duration" * ?)) AS "duration_ms"
  FROM "_s0"
)
SELECT *
FROM "_s1"
WHERE ("duration_ms" > ?)
---
params:
  0: 1000
  1: 500
