crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__multi_stats_then_drop.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count(), avg(duration) by host | drop avg_duration\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count", AVG("duration") AS "avg_duration"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  GROUP BY "host"
)
SELECT * EXCLUDE ("avg_duration")
FROM "_s0"
