crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__multi_stats_then_where.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | stats count() by host | where count > 10\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  WHERE "service" = ?
  GROUP BY "host"
)
SELECT *
FROM "_s0"
WHERE ("count" > ?)
---
params:
  0: 'nginx'
  1: 10
