crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__multi_table_then_stats.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | table host, service | stats count() by host\")"
---
WITH _s0 AS (
  SELECT "host", "service"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT "host", COUNT(*) AS "count"
FROM "_s0"
GROUP BY "host"
