crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_bigint_glob_casts_to_varchar.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status=4*\", &[(\"status\", CT::BigInt)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE CAST("status" AS VARCHAR) GLOB ?
---
params:
  0: '4*'
